--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,13 +22,19 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'GraphikSemibold';
+  src: local('GraphikSemibold'),
+    url(/fonts/graphik-font-family/GraphikSemibold.otf) format('truetype');
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
-  font-family: SpectrumSans !important;
+  font-family: GraphikSemibold !important;
 }
 
 a {
