--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,8 @@ body {
   margin: 0;
   /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
-  font-family: GraphikSemibold !important;
+  /* font-family: GraphikSemibold !important; */
+  font-family: SpectrumSans !important;
 }
 
 a {
