Added pages for different fonts

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,7 +62,6 @@ body {
   /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
   /* font-family: GraphikSemibold !important; */
-  font-family: SpectrumSans !important;
 }
 
 a {
@@ -82,4 +81,12 @@ a {
     color: white;
     background: black;
   }
+}
+
+.spectrum-font {
+  font-family: SpectrumSans !important;
+}
+
+.graphik-font {
+  font-family: GraphikSemibold !important;
 }
