--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@
   font-display: swap;
 } */
 
-@font-face {
+/* @font-face {
   font-family: 'SpectrumSans';
   src: local('SpectrumSans'),
     url(/fonts/SpectrumSans_Bd.ttf) format('truetype');
@@ -38,15 +38,12 @@
   font-weight: normal;
   font-style: normal;
   font-display: swap;
-}
+} */
 
 @font-face {
   font-family: 'SpectrumSans';
   src: local('SpectrumSans'),
     url(/fonts/SpectrumSans_Md.ttf) format('truetype');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
 }
 
 @font-face {
